--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test2": "NODE_ENV=test npm run test:client && npm run test:server",
     "knex:migrate": "node ./node_modules/knex/bin/cli.js migrate:latest",
     "knex:seed": "node --require dotenv/config ./node_modules/knex/bin/cli.js seed:run",
-    "postinstall": "node build/postinstall.js"
+    "prestart": "node build/postinstall.js"
   },
   "dependencies": {
     "accounting": "0.4.1",
